// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createHandlers should handle eth_chainId 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_chainId",
  "result": "0x384",
}
`;

exports[`createHandlers should handle eth_call 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_call",
  "result": "0x",
}
`;

exports[`createHandlers should handle eth_getBalance 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_getBalance",
  "result": "0x0",
}
`;

exports[`createHandlers should handle eth_estimateGas 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_estimateGas",
  "result": "0x5208",
}
`;

exports[`createHandlers should handle tevm_contract 1`] = `
{
  "error": {
    "code": "MethodNotSupported",
    "message": 
"UnsupportedMethodError: tevm_contract is not supported. Encode the contract arguments and use tevm_call instead.

Docs: https://tevm.sh/reference/tevm/errors/classes/methodnotsupportederror/
Version: 1.1.0.next-73"
,
  },
  "id": 1,
  "jsonrpc": "2.0",
  "method": "tevm_contract",
}
`;

exports[`createHandlers should handle eth_mining 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_mining",
  "result": false,
}
`;

exports[`createHandlers should handle eth_syncing 1`] = `
{
  "id": 1,
  "jsonrpc": "2.0",
  "method": "eth_syncing",
  "result": false,
}
`;
